'Niemandem zugewiesen' Suchfilter  (#3124)
RISDEV-9015